@@ -6874,7 +6874,6 @@ config-schema:
             clearWatchlistNotifications: ClearWatchlistNotificationsJob
             userOptionsUpdate: UserOptionsUpdateJob
             revertedTagUpdate: RevertedTagUpdateJob
-            enqueue: EnqueueJob
             'null': NullJob
             userEditCountInit: UserEditCountInitJob
         type: object
